# algorithms

./: .gitignore  README.md  Scratchpad.sln
Scratchpad/: DynamicProblems.cpp  GraphTests.cpp  LinkedList.cpp  MatrixTests.cpp  MergeSort.cpp  QuickSort.cpp  ReadMe.txt  RedBlackTree.cpp  Scratchpad.cpp  Scratchpad.vcxproj  Scratchpad.vcxproj.filters  SimpleGraph.txt  SimpleGraphTests.cpp  StockPrices.cpp  Templates.cpp  Tree.cpp  __EmptyTestTemplate.cpp  example.txt  kargerMinCutSimple.txt  packages.config  stdafx.cpp
cross-platform/: CMakeLists.txt  main.cpp
cross-platform/GoogleTests/: CMakeLists.txt
cross-platform/GoogleTests/basic_tests/: CMakeLists.txt  GoogleTests.cpp  Utilities.cpp
